revamped the booking form, fixed a few issues on mobile

--- a/packages/navigate-theme/src/styles/abstracts/_mixins.scss
+++ b/packages/navigate-theme/src/styles/abstracts/_mixins.scss
@@ -141,6 +141,14 @@
   font-size: 1.6rem;
 }
 
+@mixin hover-supported {
+  @media not all and (pointer: coarse) {
+    &:hover {
+      @content;
+    }
+  }
+}
+
 // Pouya's media query manager
 /* 
 specified dimensions : 
