--- a/packages/navigate-theme/src/styles/components/_booking-details.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-details.scss
@@ -25,7 +25,6 @@
 
     & select {
       background: white;
-      color: $color-grey-dark;
     }
 
     &--consent {
@@ -48,6 +47,10 @@
           margin-right: 0.5rem;
         }
       }
+    }
+
+    @include respond(phone) {
+      grid-column: 1;
     }
   }
 
@@ -95,6 +98,10 @@
       grid-template-columns: 100%;
       grid-column-gap: 1rem;
       grid-column: 1/-1;
+    }
+
+    @include respond(phone) {
+      grid-column: 1;
     }
   }
 
