--- a/packages/navigate-theme/src/styles/components/_booking-form.scss
+++ b/packages/navigate-theme/src/styles/components/_booking-form.scss
@@ -1,5 +1,5 @@
 .booking-form {
-  border: 1px solid #e7e7e7;
+  // border: 1px solid #e7e7e7;
   border-radius: 0.4rem;
 
   @include respond(tablet) {
@@ -13,14 +13,13 @@
 
   & > form {
     display: grid;
-    grid-template-columns: 46% 49%;
+    grid-template-columns: 49% 49%;
     grid-row-gap: 0.8rem;
-    grid-column-gap: 0.8rem;
+    grid-column-gap: 1.1rem;
     padding: 1.6rem;
-    height: 79rem;
-
-    @include respond(laptop) {
-    }
+    width: 50%;
+    margin: 0 auto;
+    border: 1px solid #e7e7e7;
 
     @include respond(tablet) {
       grid-template-columns: 48% 51%;
@@ -29,6 +28,7 @@
     @include respond(phone) {
       height: 100%;
       grid-template-columns: 100%;
+      grid-column: 1;
     }
 
     & > select {
@@ -103,13 +103,13 @@
 
   &--in-page {
     display: grid;
-    grid-template-columns: 50% 42%;
+    grid-template-columns: 100%;
     padding: 0rem;
     grid-column-gap: 10.3rem;
 
     @include respond(laptop) {
       display: grid;
-      grid-template-columns: 58.4% 33%;
+      grid-template-columns: 100%;
       padding: 0rem;
     }
 
@@ -420,6 +420,10 @@
     &--ms {
       color: #06babf;
       border: 1px solid #06babf;
+    }
+
+    @include respond(phone) {
+      grid-column: 1;
     }
 
     // margin-bottom: 4rem;
@@ -1168,6 +1172,12 @@
       @include respond(phone) {
         width: 100%;
       }
+
+      & :nth-child(2) {
+        @include respond(phone) {
+          grid-column: 2;
+        }
+      }
     }
 
     &--error {
@@ -1229,11 +1239,17 @@
     align-items: center;
     cursor: pointer;
     font-size: 1.6rem;
+    margin-left: 25.2%;
+    margin-top: 2.4rem;
 
     > a {
       color: $color-med-teal;
       font-family: Nunito-Black;
       padding-left: 0.6rem;
+    }
+
+    @include respond(laptop) {
+      margin-left: 17%;
     }
 
     @include respond(tablet) {
